--- a/src/styles/components/_page.scss
+++ b/src/styles/components/_page.scss
@@ -1,5 +1,6 @@
 .page {
   &.app {
     display: flex;
+    height: 100vh;
   }
 }
