--- a/src/styles/pages/auth/_login.scss
+++ b/src/styles/pages/auth/_login.scss
@@ -3,6 +3,8 @@
   display: flex;
   flex: 1;
   flex-direction: column;
+  height: 100vh;
+  width: 100vw;
 
   .footer {
     display: none;
